Adding figures for exercises

--- a/IsingModelExercise.ipynb
+++ b/IsingModelExercise.ipynb
@@ -107,7 +107,7 @@
     "In this example, we will us a qubit-based quantum computer to carry out the simulation. Qubits are the natural representation of spin-1/2 particles. The qubit is represented by the Bloch Sphere, as shown in Figure 1.\n",
     "\n",
     "<p align=\"center\">\n",
-    "<img src=\"../figures/blochSphere.png\" width=\"400\"/>\n",
+    "<img src=\"figures/blochSphere.png\" width=\"400\"/>\n",
     "<em>Figure 1: The Bloch Sphere</em>\n",
     "</p>\n",
     "\n",
@@ -130,7 +130,7 @@
     "The term decribes the interaction between two qubits in the 1D chain and is described by the product of two Pauli-Z operators. This Pauli-ZZ operation, when exponentiated, corresponds to a *controlled-Z* operation (Please see the notes for a dicussion on gate decomposition). An entangling operation between the two qubits. This can be decomposed in a series of *CNOT* and R_z gates in the following way: \n",
     "\n",
     "<p align=\"center\">\n",
-    "<img src=\"../figures/ZZgateFull.png\" width=\"400\"/>\n",
+    "<img src=\"figures/ZZgateFull.png\" width=\"400\"/>\n",
     "<em>Figure 2: Pauli-ZZ gate</em>\n",
     "</p>\n",
     "\n",
@@ -146,7 +146,7 @@
     "which can be expressed on a circuit as:\n",
     "\n",
     "<p align=\"center\">\n",
-    "<img src=\"../figures/Xgate.png\" width=\"300\"/>\n",
+    "<img src=\"figures/Xgate.png\" width=\"300\"/>\n",
     "<em>Figure 3: Pauli-X gate</em>\n",
     "</p>"
    ]
@@ -160,7 +160,7 @@
     "We are now interested in the circuit decomposition of the 1D Ising model with a tranverse field for a specific number of Lattice sites. To begin we consider the $n=2$ case. Putting all the above together, the circuit becomes:\n",
     "\n",
     "<p align=\"center\">\n",
-    "<img src=\"../figures/TrotterStep.png\" width=\"400\"/>\n",
+    "<img src=\"figures/TrotterStep.png\" width=\"400\"/>\n",
     "<em>Figure 4: Trotter Step for n=2 sites</em>\n",
     "</p>\n",
     "\n",
