--- a/IsingModelExercise.ipynb
+++ b/IsingModelExercise.ipynb
@@ -596,6 +596,8 @@
     "\n",
     "Try changing some of the parameters of the model and see what physics you can recover:\n",
     "\n",
+    "+ Can you calculate the energy of the system?\n",
+    "\n",
     "+ What happens as you vary $J$ and $\\Gamma$? Can you make a phase space plot of the model?\n",
     "\n",
     "+ What is the effect of increasing the lattice? (Be aware, increasing the number of qubits too far in the simulation can be extremely computationally heavy!)\n",
@@ -604,6 +606,11 @@
     "\n",
     "+ Can you extract other observables from the system? For example, how would you extract the expectation value $\\langle \\sigma^x_i \\rangle$, or the two-point correlation function $C_{xx} = \\langle \\sigma^x_i \\sigma^x_{i+1} \\rangle$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
