Adding more exercises!

--- a/IsingModelExercise.ipynb
+++ b/IsingModelExercise.ipynb
@@ -604,13 +604,10 @@
     "\n",
     "+ Does the initial state of the system have a large effect on the physics?\n",
     "\n",
-    "+ Can you extract other observables from the system? For example, how would you extract the expectation value $\\langle \\sigma^x_i \\rangle$, or the two-point correlation function $C_{xx} = \\langle \\sigma^x_i \\sigma^x_{i+1} \\rangle$."
+    "+ Can you extract other observables from the system? For example, how would you extract the expectation value $\\langle \\sigma^x_i \\rangle$, or the two-point correlation function $C_{xx} = \\langle \\sigma^x_i \\sigma^x_{i+1} \\rangle$.\n",
+    "\n",
+    "+ Can you think of how we can minimise the Trotter error?"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
